# CumulusCI-Jira

./: 404.html  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  cumulusci.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: code_quality_checks.yml
cumulusci_jira/: __init__.py  cumulusci.yml  exceptions.py  parser.py  tasks.py
docs/: index.md
search/: search_index.json
tests/: test_cumulusci_jira_plugin.py  test_parser.py  test_tasks_base.py
